@@ -2,7 +2,11 @@ Bug list for Defense Condition game project
 
 Author(s): Ray Gardener (support@daylongraphics.com)
 Repository: https://github.com/RayOfDaylon/Defcon
-September 7, 2023
+September 9, 2023
+
+
+FIXED: Stats panel could indicate human being abducted even after 
+the lander carrying him was killed.
 
 FIXED: Phreds were spawning too many munchies, so
 now they don't countdown to spawning unless 
